# AlgoTrader-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PHASE_0_VERIFICATION.md  PHASE_1_COMPLETE.md  README.md  docker-compose.yml  kaggle_ingest.py  pyproject.toml  requirements-api.txt  requirements.txt
.github/workflows/: ci.yml
airflow/dags/: stock_price_daily_ingestion.py
config/: alert_rules.yml  prometheus.yml
config/grafana/dashboards/: api-main.json
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/datasources/: datasources.yml
docker/: Dockerfile.airflow  Dockerfile.dev  Dockerfile.serve  Dockerfile.train
docs/: 00_current_state_analysis.md  00_learning_curriculum.md  PHASE_0_SUMMARY.md
docs/architecture/: ADR_INDEX.md  system_design.md
docs/architecture/adr/: 001_feature_store_selection.md  002_api_framework.md  003_orchestration.md  004_ml_framework.md  005_experiment_tracking.md  006_monitoring.md  007_deployment.md  008_data_storage.md
exercises/: README.md
k8s/: deployment.yml  services.yml
production/: __init__.py  health_check.py
production/api/: main.py  models.py  schemas.py
production/data/: ingestion.py
production/database/: schema.sql
production/features/: feast_config.py
production/monitoring/: metrics.py
production/validation/: backtesting.py  leakage_detection.py  temporal_cv.py
scripts/: process_stock_price_data.py
tests/: test_api.py  test_data_ingestion.py  test_models.py  test_monitoring.py  test_validation.py
